--- a/README.org
+++ b/README.org
@@ -23,3 +23,10 @@
 [[https://img.shields.io/badge/licence-MIT%2FCC%20BY--SA%204.0-000000.svg?style=flat-square]]
 
 Team Documents and handbooks used by projects at the Chenla Institute.
+
+
+--- 
+
+*NOTE*: The primary repo is @ [[http://git.chenla.org/hoard/handbooks]] 
+Please submit pull requests and issues there.  A read
+only-mirror is maintained @ [[https://github.com/chenla/handbooks]]
